{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 19,
  "lineage": "73495a87-b511-d72e-03bb-b548f49a8b46",
  "resources": [
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa46471b02db0ce",
            "arn": "arn:aws:ec2:ap-south-1:847322600116:instance/i-07486090e255ec277",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07486090e255ec277",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa9451af1bc3948a",
            "private_dns": "ip-10-0-3-177.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e344d807d97e42ea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011499d7bf5757800",
            "tags": {
            },
            "tags_all": {
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
            },
            "vpc_security_group_ids": [
              "sg-075f7976192256f77"
            ]
          },
          "dependencies": [
            "module.ec2-instance.aws_iam_instance_profile.this",
            "module.ec2-instance.aws_iam_role.this",
            "module.ec2-instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2-instance.data.aws_partition.current",
            "module.ec2-instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:network-acl/acl-0dfaddc083620681b",
            "default_network_acl_id": "acl-0dfaddc083620681b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0dfaddc083620681b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "847322600116",
            "subnet_ids": [
              "subnet-011499d7bf5757800",
              "subnet-066527ce26de1b015"
            ],
            "tags": {
              "Name": "dvvpc-default"
            },
            "tags_all": {
              "Name": "dvvpc-default"
            },
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:route-table/rtb-01871c55ffbab32e3",
            "default_route_table_id": "rtb-01871c55ffbab32e3",
            "id": "rtb-01871c55ffbab32e3",
            "owner_id": "847322600116",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "dvvpc-default"
            },
            "tags_all": {
              "Name": "dvvpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:security-group/sg-075f7976192256f77",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-075f7976192256f77",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "847322600116",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dvvpc-default"
            },
            "tags_all": {
              "Name": "dvvpc-default"
            },
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:internet-gateway/igw-0099b9949f5f9b165",
            "id": "igw-0099b9949f5f9b165",
            "owner_id": "847322600116",
            "tags": {
              "Name": "dvvpc"
            },
            "tags_all": {
              "Name": "dvvpc"
            },
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0099b9949f5f9b165",
            "id": "r-rtb-0b35d2f1c02e86b091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b35d2f1c02e86b09",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:route-table/rtb-0a11c9ac6448fe8d8",
            "id": "rtb-0a11c9ac6448fe8d8",
            "owner_id": "847322600116",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dvvpc-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "dvvpc-private-ap-south-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:route-table/rtb-092f9f45a7ca647e1",
            "id": "rtb-092f9f45a7ca647e1",
            "owner_id": "847322600116",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dvvpc-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "dvvpc-private-ap-south-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:route-table/rtb-0b35d2f1c02e86b09",
            "id": "rtb-0b35d2f1c02e86b09",
            "owner_id": "847322600116",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dvvpc-public"
            },
            "tags_all": {
              "Name": "dvvpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064fad2def4690427",
            "route_table_id": "rtb-0a11c9ac6448fe8d8",
            "subnet_id": "subnet-066527ce26de1b015"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0861935ac6ea71072",
            "route_table_id": "rtb-092f9f45a7ca647e1",
            "subnet_id": "subnet-04d3b039ede44e324"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0661c1c798c35e0e7",
            "route_table_id": "rtb-0b35d2f1c02e86b09",
            "subnet_id": "subnet-011499d7bf5757800"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7b66f242a039e57",
            "route_table_id": "rtb-0b35d2f1c02e86b09",
            "subnet_id": "subnet-0dd0ddaf9b5538ff7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:subnet/subnet-066527ce26de1b015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066527ce26de1b015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "847322600116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dvvpc-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "dvvpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:subnet/subnet-04d3b039ede44e324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d3b039ede44e324",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "847322600116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dvvpc-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "dvvpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:subnet/subnet-011499d7bf5757800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011499d7bf5757800",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "847322600116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dvvpc-public-ap-south-1a"
            },
            "tags_all": {
              "Name": "dvvpc-public-ap-south-1a"
            },
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:subnet/subnet-0dd0ddaf9b5538ff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd0ddaf9b5538ff7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "847322600116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dvvpc-public-ap-south-1b"
            },
            "tags_all": {
              "Name": "dvvpc-public-ap-south-1b"
            },
            "vpc_id": "vpc-044b101c4c4fd79fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:847322600116:vpc/vpc-044b101c4c4fd79fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dfaddc083620681b",
            "default_route_table_id": "rtb-01871c55ffbab32e3",
            "default_security_group_id": "sg-075f7976192256f77",
            "dhcp_options_id": "dopt-01b79bbd62e44399d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044b101c4c4fd79fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01871c55ffbab32e3",
            "owner_id": "847322600116",
            "tags": {
              "Name": "dvvpc"
            },
            "tags_all": {
              "Name": "dvvpc"
            }
          }
        }
      ]
    }
  ]
}